[gd_scene load_steps=7 format=3 uid="uid://d3t4ggc8i6ssg"]

[ext_resource type="Script" uid="uid://x0dx7f7c4rwy" path="res://Scripts/Turrets/turret_b.gd" id="1_a0it2"]
[ext_resource type="PackedScene" uid="uid://cnxuomugdvl34" path="res://Scenes/Bullets/bullet_b.tscn" id="2_n8o64"]
[ext_resource type="Texture2D" uid="uid://bri4vpi3nn0a" path="res://Art/Minigun_0001.png" id="3_0ycgr"]
[ext_resource type="Texture2D" uid="uid://c3lnx3e4lwa8r" path="res://Art/Minigun_0002.png" id="4_ietyn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cpcge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0ycgr")
}, {
"duration": 1.0,
"texture": ExtResource("4_ietyn")
}],
"loop": true,
"name": &"shoot",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ycgr"]
size = Vector2(588, 20)

[node name="TurretB" type="Node2D"]
script = ExtResource("1_a0it2")
BULLET = ExtResource("2_n8o64")

[node name="TurretSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-46, -10)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_cpcge")
animation = &"shoot"
frame_progress = 0.370903

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-9, 0)
target_position = Vector2(300, 0)

[node name="ReloadTimer" type="Timer" parent="RayCast2D"]
wait_time = 0.05
one_shot = true

[node name="TowerRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerRange"]
position = Vector2(294, 0)
shape = SubResource("RectangleShape2D_0ycgr")

[connection signal="timeout" from="RayCast2D/ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="area_entered" from="TowerRange" to="." method="_on_tower_range_area_entered"]
[connection signal="area_exited" from="TowerRange" to="." method="_on_tower_range_area_exited"]
